# pathfinder-ai-security-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  nuclei_output.json  pyproject.toml  report.html
Docs/: ARCHITECTURE.md  BRAINSTORMING.md  DECISION_LOG.md  DESIGN_PHILOSOPHY.md  INDEX.md  LANDSCAPE_REVIEW.md  TECHNICAL_DEEPDIVE.md  sample-report.html
docs/: ARCHITECTURE.md  DECISION_LOG.md  DEMO_SCRIPT.md  TECHNICAL_DEEPDIVE.md
sessions/: unknown_20260511_083611.json
src/pathfinder/: __init__.py  cli.py  config.py
src/pathfinder/core/: __init__.py  graph.py  output.py  reasoning.py
src/pathfinder/ingestors/: __init__.py
src/pathfinder/models/: __init__.py  schema.py
src/pathfinder/scanners/: __init__.py  approval.py  httpx_scanner.py  nuclei.py  subfinder.py
