[project]
name = "pathfinder"
version = "0.1.0"
description = "AI-Assisted External Assessment Platform - Intelligence layer for security scanners"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "groq>=0.11.0",
    "pyclean>=3.6.0",
]

[project.scripts]
pathfinder = "pathfinder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathfinder"]
